Fixed logo spacing.

--- a/www/_css/site.css
+++ b/www/_css/site.css
@@ -21,7 +21,7 @@ body{
 #logo{
 	width: 300px;
 	height: 26px;
-	margin: 0px 10px 15px 10px;
+	margin: 5px 10px 10px 10px;
 	float: left;
 	color: #ffffff;
 	font-family: 'BauhausRegular';
